<resources>
    <string name="app_name">HelloMovie</string>
    <string name="action_settings">Settings</string>
    <string name="action_fresh">Fresh</string>
    <string name="action_filter">显示收藏</string>
    <string name="type_key">MovieType</string>
    <string name="default_movie_type">com.example.hello.hellomovie.Threads.TopMovieThread</string>
    <string name="movie_info_show">影片评论</string>
    <string name="movie_info_show_preview">预告片</string>
    <string name="movie_info_show_contnet">剧情简介</string>
    <string name="movie_info_show_no">暂无评论</string>
    <string name="movie_info_show_no_pre">暂无预告</string>
    <string name="txt_main_info">正在刷新</string>
    <string name="play">play</string>
</resources>
