<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBack"
    tools:context="com.example.hello.hellomovie.Activitys.ShowInfoActivity">

    <LinearLayout

        android:id="@+id/activity_show_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_padding">

        <TextView
            android:id="@+id/txt_tittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/big_font_size" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.example.hello.hellomovie.Views.MovieImageView
                android:id="@+id/iv"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:adjustViewBounds="true" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_font_size" />

                <TextView
                    android:id="@+id/txt_length"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/medium_font_size" />

                <TextView
                    android:id="@+id/txt_rate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/big_font_size" />

                <Button
                    android:id="@+id/btn_coll"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="收藏" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_info_show_contnet"
            android:textColor="@color/colorAuthor"
            android:textSize="@dimen/big_font_size" />

        <TextView
            android:id="@+id/txt_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_info_show_preview"
            android:textColor="@color/colorAuthor"
            android:textSize="@dimen/big_font_size" />

        <ListView
            android:id="@+id/lv_preview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_info_pre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_info_show_no_pre"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/big_font_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_info_show"
            android:textColor="@color/colorAuthor"
            android:textSize="@dimen/big_font_size" />

        <ListView
            android:id="@+id/lv_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/txt_info_comment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/movie_info_show_no"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/big_font_size" />
    </LinearLayout>
</ScrollView>